# ScreenSmart

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEMO.md  EXAMPLE.md  README.md  ScreenSmart_Brief_Humanized.md  docker-compose.yml  pyproject.toml  requirements.txt  sanctions.md
chatbot/: Dockerfile  config.yaml  requirements.txt
chatbot/chatbot/: agent.py  config.py  main.py
crypto_exposure_graph/: pyproject.toml  requirements.txt
crypto_exposure_graph/src/crypto_exposure_graph/: __init__.py
crypto_exposure_graph/src/crypto_exposure_graph/db/: __init__.py  database.py  init_db.py  schema.py
crypto_exposure_graph/src/crypto_exposure_graph/domain/: __init__.py  enums.py
crypto_exposure_graph/src/crypto_exposure_graph/exposure/: __init__.py  benchmark.py  demo.py  lookup.py  policy.py  precompute.py  scoring.py  synthetic_graph.py
exposure_graph/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
exposure_graph/src/screensmart/: __init__.py  worker.py
exposure_graph/src/screensmart/db/: __init__.py  database.py
exposure_graph/src/screensmart/domain/: __init__.py  enums.py
exposure_graph/src/screensmart/exposure/: __init__.py  lookup.py  policy.py  precompute.py  scoring.py  synthetic_graph.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  Background.jsx  api.js  feed.js  styles.css
presentation/: ScreenSmart_CtrlAltElite.pptx  build_deck.py  pitch.html  render_pitch.py  render_svg.py
sanctions_ingestion/: .env.example  Dockerfile  README.md  pyproject.toml
sanctions_ingestion/logs/: ingest.jsonl
sanctions_ingestion/src/sanctions_ingest/: __init__.py  cli.py  config.py  download.py  logging_setup.py  pipeline.py  scheduler.py  sources.py
sanctions_ingestion/src/sanctions_ingest/db/: __init__.py  base.py  init_db.py  repository.py  session.py
sanctions_ingestion/src/sanctions_ingest/models/: __init__.py  crypto.py  ingest_run.py  ofac.py  ofsi.py  opensanctions.py  un.py
sanctions_ingestion/src/sanctions_ingest/parsers/: __init__.py  _util.py  ofac_csv.py  ofac_xml.py  ofsi_csv.py  opensanctions_csv.py  un_xml.py
sanctions_ingestion/src/sanctions_ingest/repositories/: __init__.py
sanctions_ingestion/src/sanctions_ingest/schemas/: __init__.py  base.py  crypto.py  ofac.py  ofsi.py  opensanctions.py  un.py
screensmart_app/: .dockerignore  .gitignore  Dockerfile  README.md  requirements-dev.txt  requirements.txt
screensmart_app/src/: api_demo_identity.py  benchmark.py  diagnose.py  download_data.py  explore.py  generate_transactions.py  peek.py  train_model.py  validate.py
screensmart_app/src/screensmart/: __init__.py  api.py  config.py  db.py  evaluation.py  logging_setup.py  normalization.py  risk.py  synthesis.py  worker.py
screensmart_app/src/screensmart/domain/: entity.py  enums.py  features.py  payment.py  result.py
scripts/: generate_sanctions_report.py
src/: api_demo.py  diagnose.py  download_data.py  explore.py  generate_transactions.py  screener.py  serve.py  train_model.py
src/screensmart/: api.py  config.py  evaluation.py  normalization.py  synthesis.py
src/screensmart/db/: init_db.py  schema.py
src/screensmart/domain/: __init__.py  entity.py  models.py  payment.py  result.py
src/screensmart/exposure/: evaluate.py  lookup.py  precompute.py
src/screensmart/indexing/: __init__.py  index.py
src/screensmart/matching/: scoring.py
src/screensmart/model/: base.py  dataset.py  estimators.py
src/screensmart/screening/: __init__.py  screener.py
streaming/: Dockerfile  requirements.txt
streaming/pipeline/: __init__.py  accumulator.py  bus.py  config.py  contracts.py  db.py  generator.py  ingest.py  ws_gateway.py
(+7 files in other folders)
