[project]
name = "screensmart"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.63.0",
    "idna==3.18",
    "jellyfish==1.2.1",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "lightgbm==4.6.0",
    "lxml==6.1.1",
    "matplotlib==3.11.0",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "packaging==26.2",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "pyarrow==24.0.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "rapidfuzz==3.14.5",
    "requests==2.34.2",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "sqlalchemy>=2.0,<2.1",
    "psycopg[binary]>=3.2,<3.3",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "urllib3==2.7.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "screensmart"
module-root = "screensmart_app/src"
