[project]
name = "screensmart-crypto-exposure-graph"
version = "0.1.0"
description = "Synthetic crypto wallet exposure-graph MVP for ScreenSmart"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0,<2.1",
    "psycopg[binary]>=3.2,<3.3",
    "python-dotenv>=1.0",
]

[project.scripts]
ceg-init-db = "crypto_exposure_graph.db.init_db:main"
ceg-build-graph = "crypto_exposure_graph.exposure.synthetic_graph:main"
ceg-precompute = "crypto_exposure_graph.exposure.precompute:main"
ceg-lookup = "crypto_exposure_graph.exposure.lookup:main"
ceg-demo = "crypto_exposure_graph.exposure.demo:main"
ceg-benchmark = "crypto_exposure_graph.exposure.benchmark:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]
