[project]
name = "screensmart-exposure-graph"
version = "0.1.0"
description = "Counterparty exposure-graph MVP for ScreenSmart sanctions screening"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0,<2.1",
    "psycopg[binary]>=3.2,<3.3",
    "pandas>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
eg-init-db      = "screensmart.db.init_db:main"
eg-build-graph  = "screensmart.exposure.synthetic_graph:main"
eg-precompute   = "screensmart.exposure.precompute:main"
eg-lookup       = "screensmart.exposure.lookup:main"
eg-evaluate     = "screensmart.exposure.evaluate:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]
